# tegia-node

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  install.sh  pipeline.json
.github/workflows/: main.yml  static.yml
db/: tegia_core.names.sql
deb/: test.sh  test_db.sh
deb/gumbo-parser/DEBIAN/: control
deb/scripts/: git_clone  mysql_password  start
deb/scripts/tegia-test/: postinst
dicts/: 001.json  002.json  countries.json
docs/: architecture.md  doxygen.cfg  intro.md  namespaces.md  route.md  workspace.md
docs-html/_bundle/: app.css  app.js  app.rtl.css  vendor.css  vendor.js  vendor.rtl.css
docs/adr/: ADR-0001-actor-execution-model.md  ADR-0002-implementation-draft.md  ADR-0002-ws-route-registration-model.md  ADR-0003-ws-route-authorization.md  ADR-0004-ws-data-initialization.md  README.md
docs/tasks/: README.md  task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md
include/: ISS.h  const.h  node.h  tegia.h
include/actors/: actor_base.h  actor_base_t.h  actor_list.h  add_task.h  message_t.h  routers_map.h  types.h
include/app/: router.h
include/context/: context.h  context2.h  jwt.h  log.h  thread_context.h  user.h
include/core/: cast.h  config.h  const.h  core.h  coroutine.h  crypt.h  currency.h  documents.h  html_parser.h  html_parser2.h  http.h  http2.h  json.h  person.h  string.h  time.h  xml.h
include/dao/: Property.h  access.h  collection.h  entity.h  entity2.h  object.h  pentity.h  record.h
include/neo4j/: neo4j.h
include/node/: config.h  logger.h  logger_print.h
include/sockets/: AbstractSocket.h  ClientSocket.h  Helper.h  ServerSocket.h  SocketConstants.h  SocketHelper.h  SocketManager.h  SocketMessageQueue.h
include/tegia/: core.h  namespaces.h  tegia.h
include/types/: base.h  date.h  email.h  fio.h  person.h  phone.h
include/vk/: groups.h  likes.h  photos.h  users.h  vk_api.h  vk_api_error.h  wall.h
src/: core.cpp  fn.h  main.cpp  namespases.cpp  tegia.cpp
src/actors/: actor.cpp  actor_list.cpp  add_task.cpp  map.cpp  map.h  map_old.cpp_oo  message_t.cpp  types.cpp
src/ai/: prompt.cpp
src/app/: auth.cpp  router.cpp  ws.cpp
src/config/: tegia-config.cpp
src/context/: auth.cpp  context.cpp  jwt.cpp  user.cpp
src/core/: cast.cpp  core.cpp  crypt.cpp  documents.cpp  error.cpp  html.cpp  html_parser.cpp  html_parser2.cpp  http.cpp  http2.cpp  json.cpp  person.cpp  string.cpp  task_t.cpp  time.cpp  xml.cpp
src/dict/: dict.cpp
src/dictionaries/: catalog.cpp  catalog.h  dictionares.cpp-old  dictionary.h  index.cpp
src/llm/: gemini.cpp  llm_t.cpp  local.cpp  openrouter.cpp
src/node/: bucket.cpp  bucket.h  config.cpp  config.h  log.h  logger.cpp  logger.h  node.cpp  node.h
src/platform/: ISS.cpp  ISS_base.h  Router.h  http.h  platform.h  tegia_http.h
src/sockets/: AbstractSocket.cpp  ClientSocket.cpp  ServerSocket.cpp  SocketManager.cpp
src/threads/: -context.h  data.cpp  data.h  file.cpp  manager_t.cpp  manager_t.h  pool.cpp  pool.h  pool_t.cpp  pool_t.h  queue.h  thread_pool.cpp  thread_pool.h  thread_queue.h  thread_t.cpp  thread_t.h  thread_worker.h  worker.h  worker_t.cpp  worker_t.h
src/types/: date.cpp  email.cpp  fio.cpp  gender.cpp  person.cpp  phone.cpp  rus_inn.cpp  rus_passport.cpp  snils.cpp  vk.cpp
src/ws/: router.cpp  system.cpp  ws.cpp
(+181 files in other folders)
